welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: not found: value estsurOrange
if ( estsurOrange ) { x=x+1}
     ^